--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,8 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: snippet
+# theme: snippet
+theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
